--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Generate Changelog
-        run: npx standard-version --first-release
+        run: npx standard-version --skip.tag
       - name: Publish
         run: npm publish
         env:
