--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release
 
 on:
-  release:
-    types: [ created ]
+  workflow_dispatch:
 
 jobs:
   npm:
@@ -24,7 +23,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Generate Changelog
-        run: npx standard-version --skip.tag
+        run: npx standard-version
       - name: Publish
         run: npm publish
         env:
