--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Commit Lint
         uses: webiny/action-conventional-commits@v1.0.5
       - name: Secrets Scan
-        uses: max/secret-scan@master
-        with:
-          exclude_path: 'secret-scan-exclude.txt'
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Shell Lint
         uses: luizm/action-sh-checker@master
         env:
